登陆页面除注册外完成

--- a/time_core/src/main/resources/templates/common/header.html
+++ b/time_core/src/main/resources/templates/common/header.html
@@ -1,10 +1,10 @@
-<head>
-    <meta charset="utf-8"/>
-    <title>NEC：更好的CSS方案</title>
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width"/>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="apple-touch-icon" href="img/touchicon.png"/>
-</head>
+<meta charset="utf-8">
+<title>时间的沙粒</title>
+<%@ taglib uri="http://java.sun.com/jstl/core_rt" prefix="c"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/fmt" prefix="fmt"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn"%>
+<%@ taglib uri="http://www.springframework.org/tags" prefix="spring"%>
+<%@ taglib uri="http://www.springframework.org/tags/form" prefix="form"%>
+<%@taglib prefix="shiro" uri="http://shiro.apache.org/tags" %>
+<script>var BASE_PATH = window.location.host;</script>
+<link href="${basePath}/resources/zheng-admin/plugins/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet"/>
