--- a/time_core/src/main/resources/templates/common/login.html
+++ b/time_core/src/main/resources/templates/common/login.html
@@ -1,20 +1,249 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <title>时间的沙粒</title>
-  <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-  <meta name="author" content="Vincent Garreau" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="css/style.css">
+    <meta charset="utf-8">
+    <title>时间的沙粒</title>
+    <meta name="author" content="ruirui" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <link href="/login/css/default.css" rel="stylesheet" type="text/css" />
+    <!--必要样式-->
+    <link href="/login/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/login/css/demo.css" rel="stylesheet" type="text/css" />
+    <link href="/login/css/loaders.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+<div class='login'>
+    <div class='login_title'>
+        <span>管理员登录</span>
+    </div>
+    <div class='login_fields'>
+        <div class='login_fields__user'>
+            <div class='icon'>
+                <img alt="" src='/login/img/user_icon_copy.png'>
+            </div>
+            <input name="login" placeholder='用户名' maxlength="16" type='text' autocomplete="off" value=""/>
+            <div class='validation'>
+                <img alt="" src='/login/img/tick.png'>
+            </div>
+        </div>
+        <div class='login_fields__password'>
+            <div class='icon'>
+                <img alt="" src='/login/img/lock_icon_copy.png'>
+            </div>
+            <input name="pwd" placeholder='密码' maxlength="16" type='text' autocomplete="off" value="">
+            <div class='validation'>
+                <img alt="" src='/login/img/tick.png'>
+            </div>
+        </div>
+        <div class='login_fields__password'>
+            <div class='icon'>
+                <img alt="" src='/login/img/key.png'>
+            </div>
+            <input name="code" placeholder='验证码' maxlength="4" type='text' autocomplete="off"><!-- name="ValidateNum" -->
+            <div class='validation' style="opacity: 1; right: -5px;top: -3px;">
+                <canvas class="J_codeimg" id="myCanvas" onclick="Code();">对不起，您的浏览器不支持canvas，请下载最新版浏览器!</canvas>
+            </div>
+        </div>
+        <div class='login_fields__submit'>
+            <input type='button' id="doLogin" value='登录'><input type='button' id="regist" value='注册'>
+        </div>
+    </div>
+    <div class='success'>
+    </div>
+</div>
+<div class='authent'>
+    <div class="loader" style="height: 44px;width: 44px;margin-left: 28px;">
+        <div class="loader-inner ball-clip-rotate-multiple">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <p>认证中...</p>
+</div>
+<div class="OverWindows"></div>
 
-<div id="particles-js"></div>
+<link href="/login/layui/css/layui.css" rel="stylesheet" type="text/css" />
 
-<!-- scripts -->
-<script src="js/particles.min.js"></script>
-<script src="js/app.js"></script>
+<!--<script type="text/javascript" src="/login/js/jquery.min.js"></script>-->
+<script type="text/javascript" src="/script_plus/jquery-3.3.1/jquery-3.3.1.min.js"></script>
+<!--<script type="text/javascript" src="/login/js/jquery-ui.min.js"></script>-->
+<script type="text/javascript" src="/script_plus/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+<script type="text/javascript" src='/login/js/stopExecutionOnTimeout.js?t=1'></script>
+<script type="text/javascript" src="/login/layui/layui.js"></script>
+<!--<script type="text/javascript" src="js/Particleground.js"></script>-->
+<script type="text/javascript" src="/login/js/Treatment.js"></script>
+<script type="text/javascript" src="/login/js/jquery.mockjax.js"></script>
+<script type="text/javascript" color="#0f0" opacity='0.9' zIndex="-2" count="100" src="/script_plus/canvas/canvas-nest.js"></script>
+<script type="text/javascript" src="/script_plus/canvas/canvas-nest.umd.js"></script>
+<script type="text/javascript">
+		var canGetCookie = 0;//是否支持存储Cookie 0 不支持 1 支持
+		<!--var ajaxmockjax = 0;//是否启用虚拟Ajax的请求响 0 不启用  1 启用-->
+		//默认账号密码
+		<!--var truelogin = "123456";-->
+		<!--var truepwd = "123456";-->
+		var CodeVal = 0;
+	    Code();
+	    function Code() {
+			if(canGetCookie == 1){
+				createCode("AdminCode");
+				var AdminCode = getCookieValue("AdminCode");
+				showCheck(AdminCode);
+			}else{
+				showCheck(createCode(""));
+			}
+	    }
+	    function showCheck(a) {
+			CodeVal = a;
+	        var c = document.getElementById("myCanvas");
+	        var ctx = c.getContext("2d");
+	        ctx.clearRect(0, 0, 1000, 1000);
+	        ctx.font = "80px 'Hiragino Sans GB'";
+	        ctx.fillStyle = "#E8DFE8";
+	        ctx.fillText(a, 0, 100);
+	    }
+	    $(document).keypress(function (e) {
+	        // 回车键事件
+	        if (e.which == 13) {
+	            <!--$('input[type="button"]').click();-->
+	             $('#doLogin').click();
+	        }
+	    });
+	    $('input[name="pwd"]').focus(function () {
+	        $(this).attr('type', 'password');
+	    });
+	    $('input[type="text"]').focus(function () {
+	        $(this).prev().animate({ 'opacity': '1' }, 200);
+	    });
+	    $('input[type="text"],input[type="password"]').blur(function () {
+	        $(this).prev().animate({ 'opacity': '.5' }, 200);
+	    });
+	    $('input[name="login"],input[name="pwd"]').keyup(function () {
+	        var Len = $(this).val().length;
+	        if (!$(this).val() == '' && Len >= 5) {
+	            $(this).next().animate({
+	                'opacity': '1',
+	                'right': '30'
+	            }, 200);
+	        } else {
+	            $(this).next().animate({
+	                'opacity': '0',
+	                'right': '20'
+	            }, 200);
+	        }
+	    });
+	    $('#regist').click(function () {
+            WarnAlert('暂不支持用户注册');
+	    });
+	    <!--var open = 0;-->
+	    layui.use('layer', function () {
+	        //非空验证
+	        $('#doLogin').click(function () {
+	            var login = $('input[name="login"]').val();
+	            var pwd = $('input[name="pwd"]').val();
+	            var code = $('input[name="code"]').val();
+	            if (login == '') {
+	                ErroAlert('请输入您的账号');
+	            } else if (pwd == '') {
+	                ErroAlert('请输入密码');
+	            } else if (code == '' || code.length != 4) {
+	                ErroAlert('请输入验证码');
+	            } else {
+	                //认证中..
+	                //fullscreen();
+	                $('.login').addClass('test'); //倾斜特效
+	                setTimeout(function () {
+	                    $('.login').addClass('testtwo'); //平移特效
+	                }, 300);
+	                setTimeout(function () {
+	                    $('.authent').show().animate({ right: -320 }, {
+	                        easing: 'easeOutQuint',
+	                        duration: 600,
+	                        queue: false
+	                    });
+	                    $('.authent').animate({ opacity: 1 }, {
+	                        duration: 200,
+	                        queue: false
+	                    }).addClass('visible');
+	                }, 500);
 
+	                //登录
+	                var JsonData = JSON.stringify({ "nickName": login, "password": pwd, "code": code ,"trueCode": CodeVal.toUpperCase()});
+					var url = "/login/doLogin";
+					ajaxSend(JsonData,url);
+	            }
+	        })
+	    });
+	    var fullscreen = function () {
+	        elem = document.body;
+	        if (elem.webkitRequestFullScreen) {
+	            elem.webkitRequestFullScreen();
+	        } else if (elem.mozRequestFullScreen) {
+	            elem.mozRequestFullScreen();
+	        } else if (elem.requestFullScreen) {
+	            elem.requestFullscreen();
+	        } else {
+	            //浏览器不支持全屏API或已被禁用
+	        }
+	    };
+	    var ajaxSend = function(JsonData,url){
+            <!--$.ajax({-->
+                <!--type: 'post',-->
+                <!--url: url,-->
+                <!--data: JsonData,-->
+                <!--contentType:'application/json;charset=UTF-8',-->
+                <!--dataType : 'json',-->
+                <!--async: 'false',-->
+                <!--error: function () {-->
+                    <!--AjaxErro({ "code": "502", "msg": "ERROR" });-->
+                <!--},-->
+                <!--success: function(data){-->
+                    <!--console.info(data);-->
+                <!--}-->
+            <!--});-->
+            AjaxPost(url, JsonData,
+                function () {
+                    //ajax加载中
+                },
+                function (data) {
+                    //ajax返回
+                    //认证完成
+                    setTimeout(function () {
+                        $('.authent').show().animate({ right: 90 }, {
+                            easing: 'easeOutQuint',
+                            duration: 600,
+                            queue: false
+                        });
+                        $('.authent').animate({ opacity: 0 }, {
+                            duration: 200,
+                            queue: false
+                        }).addClass('visible');
+                        $('.login').removeClass('testtwo'); //平移特效
+                    }, 2000);
+                    setTimeout(function () {
+                        $('.authent').hide();
+                        $('.login').removeClass('test');
+                        if (data.code == '200') {
+                            //登录成功
+                            $('.login div').fadeOut(100);
+                            $('.success').fadeIn(1000);
+                            $('.success').html("登录成功<br /><br />欢迎回来");
+                            //跳转操作
+                            setTimeout(function () {
+                                top.location.href = '/';
+                            },1000);
+                        } else {
+                            AjaxErro(data);
+                        }
+                    }, 2400);
+                })
+	    };
+    </script>
+<script src="http://www.mycodes.net/js/tongji.js"></script>
+<script type="text/javascript"  src="https://idm-su.baidu.com/su.js"></script>
 </body>
 </html>
