--- a/time_core/src/main/resources/templates/index.html
+++ b/time_core/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" color="47,135,193" opacity='0.5' zIndex="-2" count="199" src="http://git.hust.cc/canvas-nest.js/"></script>
 </head>
 <body>
 <h1>testThymeleaf</h1>
