--- a/time_core/src/main/resources/templates/index2.html
+++ b/time_core/src/main/resources/templates/index2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" color="47,135,193" opacity='0.5' zIndex="-2" count="199" src="http://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </head>
 <body>
 <h1>testThymeleaf222222</h1>
