新闻详细页面

--- a/time_core/src/main/resources/templates/index.html
+++ b/time_core/src/main/resources/templates/index.html
@@ -24,21 +24,23 @@
 <div class="ui large top fixed menu transition hidden">
     <div class="ui container">
         <a class="active item" href="#">主页</a>
+        <a class="item" href="#">小知识</a>
         <a class="item" href="#">关于我</a>
-        <div class="right menu">
-            <div class="item">
-                <a class="ui olive basic button" href="#">登陆</a>
-            </div>
-            <div class="item">
-                <a class="ui olive button" href="#">注册</a>
-            </div>
-        </div>
+        <!--<div class="right menu">-->
+            <!--<div class="item">-->
+                <!--<a class="ui olive basic button" href="#">登陆</a>-->
+            <!--</div>-->
+            <!--<div class="item">-->
+                <!--<a class="ui olive button" href="#">注册</a>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
     <a class="active item">主页</a>
+    <a class="item" href="#">小知识</a>
     <a class="item">关于我</a>
     <a class="item">登陆</a>
     <a class="item">注册</a>
@@ -58,15 +60,16 @@
                     </i>
                 </a>
                 <a class="active item" href="#">主页</a>
+                <a class="item" href="#">小知识</a>
                 <a class="item" href="#">关于我</a>
-                <div class="right menu inverted">
-                        <div class="ui item">
-                            <a class="ui language floating dropdown link item" href="#">登陆</a>
-                        </div>
-                        <div class="ui item">
-                            <a class="ui language floating dropdown link item" href="#">注册</a>
-                        </div>
-                </div>
+                <!--<div class="right menu inverted">-->
+                        <!--<div class="ui item">-->
+                            <!--<a class="ui language floating dropdown link item" href="#">登陆</a>-->
+                        <!--</div>-->
+                        <!--<div class="ui item">-->
+                            <!--<a class="ui language floating dropdown link item" href="#">注册</a>-->
+                        <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
         <div class=" segment bg8 "> <!-- masthead segment bg8   ui container-->
@@ -84,7 +87,7 @@
                     <div class="aligned content middle">
                         <a class="header" href="/news/by">暴雨天气注意防雷</a>
                         <div class="meta">
-                            <span>2018-09-21</span>
+                            <span>2018-07-13</span>
                         </div>
                         <div class="description">
                             <p>不要在大树底下避雨。因为下雨时，大树潮湿的枝干相当于一个引雷装置，如果用手扶大树，就仿佛用手摸避雷针一样。所以，在打雷时最好离大树5米以外。</p>
@@ -98,9 +101,9 @@
                         <img src="/index/img/ljf.jpg">
                     </div>
                     <div class="aligned content middle">
-                        <a class="header" href="/news/ljf">龙卷风的预防及自救</a>
+                        <a class="header" href="/news/ljf">龙卷风</a>
                         <div class="meta">
-                            <span>2018-09-23</span>
+                            <span>2018-06-13</span>
                         </div>
                         <div class="description">
                             <p>龙卷风是从卷积云向地面延伸的极具强烈破坏性的漏斗状旋转风。龙卷风的快速旋转速度可高达每小时500英里，并可在几秒钟内毁灭所有在它经过时遇到的东西。</p>
@@ -115,7 +118,7 @@
                     <div class="aligned content middle">
                         <a class="header" href="/news/hx">预防海啸</a>
                         <div class="meta">
-                            <span>2018-09-25</span>
+                            <span>2008-06-16 17:08:15</span>
                         </div>
                         <div class="description">
                             <!--<p>海啸是海底大地震（7级以上）、超大规模滑坡、或大规模火山喷发、或天体撞击地球发引起的海水震荡波。</p>-->
