--- a/time_core/src/main/resources/templates/news/by.html
+++ b/time_core/src/main/resources/templates/news/by.html
@@ -66,15 +66,23 @@
 
     <div class="ui vertical stripe segment">
         <div class="ui main text container">
-            <h1 class="ui header ">海啸如何预防？</h1>
-            <p>2008-06-16 17:08:15</p>
-            <img src="/news/img/hx1.png" class="ui medium left floated image transition visible">
-            <p>海啸是海底大地震（7级以上）、超大规模滑坡、或大规模火山喷发、或天体撞击地球发引起的海水震荡波。既然是波，就遵循波的传播特性。海啸波和日常看到的风成海浪有本质区别：海啸波长超过100km，周期超过1小时，速度达到700km/小时。如上图：深度7000米时，速度是每小时943公里，波长是282公里；而到达深度是10米的浅海时，速度减弱为每小时36公里，波长为10.6公里（但是由于能量恒定，浪高就很高了）。而海浪波长一般150m，周长约10秒，速度很慢。由此可以看出二者能量差别。</p>
-            <p>海啸波能量巨大，在大洋中传播时波幅（表现为浪高）很低，深海航行的船几乎察觉不到，且能量衰减很少，几乎可以不损失能量的跨洋传播。海啸到达近海岸，要形成巨浪，就要通过近岸效应（缓慢变浅的海底地形是必要条件）。当海啸波从深海（4000m深度）到达浅海时，因能量没有变化，但由于海底阻力，速度变慢，则波幅（海浪高度）急剧变高。能量的守恒导致在岸边生成巨浪造成灾害。</p>
-            <img src="/news/img/hx2.jpg" class="ui medium right floated image transition visible">
-            <p>右图是印尼海啸破坏前后班达亚奇城市的卫星影像。可以看到海啸将一座繁华城市瞬间夷为平地。</p>
-            <p>海啸无法预防（这和标题自相矛盾啊海啸如何预防？），遇到海啸只有逃跑。海底地震到海啸形成并到达海岸造成破坏中间有个过程，过程时间的长短取决于震中距离的远近。因为海啸传播时间是固定的，海啸到达的时间可以计算的很精确，只要大家都到高处躲避就可以。只要海里发生大地震，沿海就应该做好防范。</p>
-            <p>美国有个太平洋海啸预警中心，可以测出哪里发生了海底地震，监测到波浪传导，并可以预警海啸是否会发生，将在何时发生。但是上次印尼海啸属于印度洋范围，而且美国的预警一般不对全世界，政府间沟通渠道也不畅通，所以才会造成如此惨剧。但是在短短几个小时内，要求政府沟通好，而且印尼政府要相信美国的预警，再发送预警到海岸居民，就目前的情况来看也是不太现实的。预防海啸需要前期做细致的应急准备工作，技术上没有难度的问题，到社会上管理上会是很有难度的问题。</p>
+            <h1 class="ui header ">暴雨天气注意防雷</h1>
+            <p>2018-07-13 10:50</p>
+            <p>我国是台风多发的国家之一，每年的夏秋季是台风高发的时期。台风来袭时，往往会伴随着狂风暴雨，而长时间暴雨不仅严重影响我们的生活，还极易导致洪涝灾害、泥石流、山体滑坡的发生，那么，遇到台风暴雨天气时应该怎么办呢?下面，小贝就为您介绍台风暴雨天气注意事项，这8大注意事项可教你如何安度台风天哦!赶紧去了解一下吧!</p>
+            <img src="/news/img/by1.jpeg" class="ui medium left floated image transition visible">
+            <p>台风暴雨天气注意事项</p>
+            <p>1、遇到大暴雨天应该：暴雨天气减少或者直接取消所有的户外活动，暴雨天气的情况下，在户外活动是十分危险的，尤其是夏季，暴雨常常伴随着电闪雷鸣，对人会有伤害的可能性，并且可能性很大，所以遇到大暴雨天气还是尽量不去户外活动，能取消的取消，能减少的减少。</p>
+            <img src="/news/img/by2.jpeg" class="ui medium right floated image transition visible">
+            <p>2、台风暴雨天气不要打赤脚或穿凉鞋，雨靴最好，防雨又绝缘，预防触电。</p>
+            <p>3、雷电期间，尽量关闭电器等易引雷击的设施。外出时遇打雷，不要站在树下和电线杆周围，远离危旧住房、工棚、临时建筑、脚手架、树木、广告牌、铁塔等容易造成伤亡的地点。</p>
+            <p>4、遇到大暴雨天应该：如果是驾车外出或是上班的话，尽量保持缓慢的车速，不停地使用雨刷，保持安全驾驶也十分重要，当然很多人觉得在车里就很安全，其实，驾车也是存在危险的，尤其是雨天路滑，最容易发生交通事故，所以车速一定要控制好，并且安静而稳定的开车，必要的时候将车子停在安全的位置，不至于人和车都困在水中。</p>
+            <img src="/news/img/by3.jpeg" class="ui medium left floated image transition visible">
+            <p>5、如发现危房、积水，请及时联系相关部门。有险情时，服从有关部门指挥，安全转移。</p>
+            <p>6、台风暴雨容易引发洪水，易发生洪灾地方的群众，要加强自我防范，人员及时转移到安全场所。</p>
+            <p>7、遇到大暴雨天应该：走在马路上的时候，遇到水流急窜或是有漩涡的地方，尽量躲着走，多半会是地下排水系统，也即把井盖打开了，要注意不要掉进去，绕着走就可以，还可以几个人一起手拉手走，这样还可以互帮互助，避免危险的发生。</p>
+            <img src="/news/img/by4.jpeg" class="ui medium right floated image transition visible">
+            <p>8、山地居民要注意山体滑坡、泥石流，山区的河边、山边住户应注意排水通畅。因为大风和暴雨容易引发山体滑坡、泥石流和地面沉降等地质灾害，造成人员伤亡，一旦发现山体滑坡、泥石流等地质灾害征兆时，不要迟疑，尽早撤离危险区，并及时报告有关部门，使周围居民能及时撤离。</p>
+
         </div>
     </div>
 
